--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.5.0",
     "fabric": "^6.7.0",
     "next": "15.3.5",
     "prisma": "^6.11.1",
